github-project/src/App.css
/* ... */
select {
  background-color: var(--white);
  cursor: pointer;
  border-color: var(--green);
  color: var(--green);
  font-weight: 700;
}

body.dark-mode select {
  background-color: var(--green-dark);
  color: var(--white);
  border-color: var(--white);
}

main {
  flex-grow: 1;
  text-align: center;
}

.loading {
  margin-top: 2rem;
  text-align: center;
  font-size: 1.5rem;
}

.error {
  color: var(--red);
}

::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}

::-webkit-scrollbar-thumb {
  background-color: var(--red-50);
  border-radius: 10px;
  border: 2px solid var(--white); 
}

::-webkit-scrollbar-thumb:hover {
  background-color: var(--gray-80); 
}

::-webkit-scrollbar-track {
  background-color: var(--white); 
  border-radius: 10px; 
}

/*** Component Styling ***/
/* UserCard */
.user-list {
  margin-top: 1rem;
  display: flex;
  flex-wrap: wrap;
  gap: clamp(10px, 1vw, 20px);
  justify-content: center;
}

.user-card-compact .user-profile .user-info {
  overflow: hidden;
  margin: .25rem;
}

.user-profile {
  border: 2px solid var(--gray-80);
  width: clamp(180px, 20vw, 200px);
  height: clamp(250px, 8vw, 300px);
  margin-top: 20px;
  padding: .5rem 1rem;
  border-radius: 10px;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

body.dark-mode .user-profile {
  background: var(--green-dark);
  color: var(--white);
}

.user-profile h3 {
  font-size: clamp(1.2rem, 2vw, 1.4rem);
  width: 100%;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  padding-bottom: .5rem;
}

.user-profile p {
  font-size: clamp(0.6rem, .75vw, 0.8rem);
  display: -webkit-box;
  -webkit-line-clamp: 3;
  line-clamp: 3;
  -webkit-box-orient: vertical;
  text-overflow: ellipsis;
  overflow: hidden;
}

.user-profile img {
  width: clamp(50px, 6vw, 75px);
  height: auto;
  align-self: center;
  border-radius: 50%;
  margin-bottom: 10px;
  border: 2px solid var(--red);
}

.user-info {
  overflow-y: auto;
  padding: 0 1rem;
  margin-bottom: clamp(0.5rem, 2vw, 1rem);
}

.user-actions { /* container for Profile/GitHub button groups */
  display: flex;
  justify-content: center;
  gap: 8px;
  align-items: center;
}

.has-bio {
  margin: .5rem 0 1rem;
}



header, footer {
  flex-shrink: 0;
}

/* Header Styling */
header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--green);
  color: var(--white);
  padding: 15px 20px;
  width: 100%;
  box-sizing: border-box;
}

body.dark-mode header {
  background-color: var(--green-darker);
}
body.dark-mode header button {
  background-color: var(--green-darker);
}

header .left-section {
  display: flex;
  align-items: center;
  gap: 10px;
}

.logo {
  font-size: 1.5em;
  font-weight: bold;
  margin-right: 2vw;
}

.users-btn {
  background: none;
  color: var(--white);
  padding: 8px 12px;
  cursor: pointer;
  border: none;
  font-size: 1.1em;
}

.home-btn {
  background: none;
  color: var(--white);
  padding: 8px 12px;
  cursor: pointer;
  border: none;
  font-size: 1.1em;
  transition: background-color 0.3s ease, color 0.3s ease;
}

.auth-buttons {
  display: flex;
  gap: 1.2vw;
}

.signup-btn, .login-btn {
  background: none;
  border: none;
  color: var(--white);
  padding: 8px 12px;
  cursor: pointer;
  font-size: 1.2em;
  font-weight: 700;
  white-space: nowrap;

}

/* Footer Styling */

footer {
  border-top: 3px solid var(--white);
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--lime);
  padding: 15px 20px;
  width: 100%;
  box-sizing: border-box;
  position: fixed;
  bottom: 0;
  font-weight: 700;
}

body.dark-mode footer {
  background-color: var(--green-darkest);
}

/* Copyright Info */
.footer-left {
  flex: 1;
  font-size: 0.8rem;
}

/* Navigation Options */
.footer-center {
  flex: 1;
  text-align: center;
  display: flex;
}

.about-btn, .contact-btn {
  color: var(--green);
  background: none;
  font-weight: 900;
  font-size: 1.2em;
  padding: 8px 12px;
  border: none;
  cursor: pointer;
  white-space: nowrap;
  min-width: 120px;
}

/* Homepage styling */

.top-content {
  margin-top: 0;
  padding: 5vh 0;
  background-color: var(--lime);
}

body.dark-mode .top-content {
  background-color: #536C53;
}
  
body.dark-mode .search-input {
  background-color: var(--gray);
  color: var(--white);
  border-color: var(--green-darkest);
}

main .intro-text {
  margin-bottom: 5vh;
  font-size: 1.2em;
  font-weight: 700;
}

.search-container {
  display: flex;
  justify-content: center;
  gap: 10px;
  align-items: center;
  padding: 10px;
  
}

.search-input {
  font-size: 1em;
  border: 2px solid var(--green-dark-80);
  background-color: var(--white);
  border-radius: 25px;
  width: 50vw;
  max-width: 800px;
  padding: 10px;
  margin-right: 10px;
}

.search-btn {
  padding: 10px 28px;
  font-size: 1em;
  background-color: var(--green);
  color: var(--white);
  border: none;
  border-radius: 15px;
  cursor: pointer;
}

.video-section {
  width: 100%;
  height: 50vh;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
}

video {
  width: 50%;
  height: 50%;
}

/* Darkmode toggle */
.footer-right {
  flex: 1;
  text-align: right;
}

.switch {
  position: relative;
  display: inline-block;
  width: 34px;
  height: 20px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: var(--green);
  transition: .4s;
  border-radius: 20px;
}

.slider:before {
  position: absolute;
  content: "";
  height: 14px;
  width: 14px;
  left: 3px;
  bottom: 3px;
  background-color: var(--white);
  transition: .4s;
  border-radius: 50%;
}

input:checked + .slider {
  background-color: var(--gray);
}

input:checked + .slider:before {
  transform: translateX(14px);
}
/* ... */

